# yolov8_cpp

./: .gitignore  CMakeLists.txt  LICENSE  PORTING_GUIDE.md  README.md  RESUME.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  run_all.sh  step1_dfl_ciou.cpp  step2_tal.cpp  step3a_dfl_loss.cpp  step3b_loss_forward.cpp  step3c_loss_backward.cpp  step4_train.cpp  step5_train_yolov8n.cpp  v8loss.h
colab/: coco128_train.ipynb  dbn_test.ipynb  dc2f_test.ipynb  dconv_test.ipynb  dnet_test.ipynb  dstruct_test.ipynb  dtest.ipynb  dtrain_coco.ipynb  dtrain_cublas.ipynb  dtrain_test.ipynb  dtrainyolo_test.ipynb  gpu_check.ipynb  thrust_poc.ipynb  train_coco320.ipynb  train_detect_coco320.ipynb
pure/: autograd.hpp  backend.hpp  blocks.hpp  dataset.hpp  dbn_test.cpp  dc2f_test.cpp  dconv_test.cpp  dnet.hpp  dnet_test.cpp  dstruct_test.cpp  dtensor.hpp  dtest.cpp  dtrain_coco.cpp  dtrain_test.cpp  dtrainyolo_test.cpp  gradcheck.cpp  gradcheck2.cpp  infer.hpp  linalg.hpp  m10_optim.cpp  m11_matmul.cpp  m12_dyn.cpp  m13_onnx_run.cpp  m14_train_real.cpp  m15_map.cpp  m16_synth.cpp  m17_gpu.cpp  m3a_conv.cpp  m3b_blocks.cpp  m3c_forward.cpp  m4a_dfl_ciou.cpp  m4bc_loss.cpp  m5_train.cpp  m5a_tal.cpp  m6_demo.cpp  m6_infer.cpp  m7_bn.cpp  m8_forward_unfused.cpp  m9_train_writeback.cpp  m_pt_module.cpp  (+15 more)
pure/ref/: bn_ref.py  export_arch.py  export_arch_all.py  export_net.py  export_unfused.py  m3a_conv.py  m3b_blocks.py  m3c_export.py  m4_targets.py  m4a_dfl_ciou.py  m6_infer_ref.py  (+8 more)
ref/: compare.py  compare_tal.py  export_yolov8n.py  gen_ref.py  loss_dfl_ref.py  loss_ref.py  tal_ref.py
(+12 files in other folders)
